--- a/.luarc.json
+++ b/.luarc.json
@@ -1,5 +1,6 @@
 {
     "diagnostics.disable": [
-        "assign-type-mismatch"
+        "assign-type-mismatch",
+        "undefined-doc-name"
     ]
 }
